# Data-Structure-And-Algorithm

./: .gitignore  readme.txt
C/: .gitignore  CMakeLists.txt  JO.HTML  readme.txt
C/src/: Addition of two Matrix.c  Adjoint and Inverse of a Matrix.c  BFS.c  Binary Search.c  Circular Douobly Link List  Circular Singly Link List.c  Doubly Link List.c  Doubly Linked List Node and Creation.c  Heap.c  Infix Evaluation Using Two Stacks.c  Kruskal's MST.c  Linear Search.c  Link List Full.c  Link List Node.c  Linked List Char Map.c  Marge Sort on Link List.c  Max Priority Queue.c  Multiplication Recursively.c  Prim MST.c  Queue using Array.c  Queue using Linked List.c  Recursive String Reversal.c  Reversing Doubly Link List.c  Reversing Singly Link List.c  Rotate an Matrix 90 Degree Clockwise.c  Some Common Sorting Algo.c  Sorting a Suare Matrix.c  Stack Array(Fixed Size).c  Stack using Linked List (Dynamic Size).c  Sum of Digits Recursively.c  Understanding  Dangling Pointer.c  Understanding NULL Pointer.c  Understanding Void Pointer.c  Understanding Wild Pointer.c  dfs.c  malloc calloc realloc and free.c  test.c
